--- a/ClientApp/app/administration/adminmenu/adminmenu.html
+++ b/ClientApp/app/administration/adminmenu/adminmenu.html
@@ -7,6 +7,11 @@
                         ${row.title}
                     </a>
                 </li>
+                <li class="nav-item" if.bind="!signinstatus">
+                    <a href="/login" class="nav-link">
+                        Login
+                    </a>
+                </li>
                 <li class="nav-item" if.bind="signinstatus">
                     <a click.delegate="signout()" class="nav-link">
                         Sign out
