--- a/ClientApp/app/administration/admin/admin.html
+++ b/ClientApp/app/administration/admin/admin.html
@@ -1,11 +1,11 @@
 <template>
     <require from="../adminmenu/adminmenu.html"></require>
+    <require from="../profiles/profiles"></require>
     <adminmenu router.bind="router" signout.call="signout()" user.bind="user" signinstatus.bind="signinStatus"></adminmenu>
     <section class="container-fluid">
         <div class="row">
             <div class="col-sm-12 body-content">
-                <!-- <slot name="admin"></slot> -->
-                <router-view></router-view>
+                <profiles></profiles>
             </div>
         </div>
     </div>
